@@ -1,10 +1,5 @@
 <?php
 
-/**
- * @file
- * Contains \Drupal\slick_ui\Form\SlickFormBase.
- */
-
 namespace Drupal\slick_ui\Form;
 
 use Drupal\Core\Url;
