@@ -1,10 +1,5 @@
 <?php
 
-/**
- * @file
- * Contains \Drupal\slick\Form\SlickAdmin.
- */
-
 namespace Drupal\slick\Form;
 
 use Drupal\Core\Url;
