@@ -1,10 +1,5 @@
 <?php
 
-/**
- * @file
- * Contains \Drupal\slick\SlickFormatterInterface.
- */
-
 namespace Drupal\slick;
 
 /**
